# vibe-link

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: app_context.rs  bt_adv_linux.rs  bt_adv_windows.rs  bt_gatt.rs  bt_generic.rs  consts.rs  main.rs  osc_server.rs  settings.rs  speed_filter.rs
src/bluetooth/: adv_linux.rs  adv_windows.rs  gatt.rs  generic.rs  mod.rs
src/remote/: receiver.rs  sender.rs
