[package]
name = "vibe-link"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", features = ["wgpu"] }
btleplug = "0.11.8"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["default", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
uuid = { version = "1.18.1", features = ["v4"] }
colored = "3.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.4", features = ["full"] }