[package]
name = "vibe-link"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", features = ["wgpu"] }
btleplug = "0.11.8"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["default", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
uuid = { version = "1.18.1", features = ["v4"] }
colored = "3.0.0"
rosc = "0.11.4"
wildmatch = "2.5.0"
hex = "0.4.3"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.4", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Foundation_Collections",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Storage_Streams",
] }