[package]
name = "vibe-link"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", features = ["wgpu"] }
btleplug = "0.11.8"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["default", "rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1.17"
uuid = { version = "1.18.1", features = ["v4"] }
rosc = "0.11.4"
wildmatch = "2.5.0"
hex = "0.4.3"
serde_json = "1.0.145"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.4", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Foundation_Collections",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Storage_Streams",
] }